# pongc2

./: .clangd  .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: ball.h  common.h  controls.h  easing.h  event.h  font.h  player.h  state.h  ui.h
src/: ball.c  common.h  easing.c  event.c  font.c  main.c  player.c  player.h  primitives.c  primitives.h  state.c  state.h  ui.c
